add start button

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <div class="container">
         <h1>Reaktionsspiel</h1>
         <p>Klicke so schnell wie möglich auf den Ball!</p>
+        <button id="startButton">Spiel starten</button>
         <div id="ball"></div>
-        <p id="message">Klicke auf den Ball, um zu starten.</p>
+        <p id="message">Drücke "Spiel starten", um zu beginnen.</p>
     </div>
     <script src="script.js"></script>
 </body>
