--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <p>Klicke so schnell wie möglich auf den Ball!</p>
         <button id="startButton">Spiel starten</button>
         <div id="ball"></div>
-        <p id="message">Drücke "Spiel starten", um zu beginnen.</p> //
+        <p id="message">Drücke "Spiel starten", um zu beginnen.</p> 
     </div>
     <script src="script.js"></script>
 </body>
